<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.gmu.cs</groupId>
    <artifactId>ecj_cgp</artifactId>
    <version>27</version>
    <packaging>jar</packaging>

<!--    <profiles>
      <profile>
	&lt;!&ndash; The default profile excludes the SystemTest suite (becaue
	     it's expensive). &ndash;&gt;
	<id>UnitTests</id>
	<activation>
	  <activeByDefault>true</activeByDefault>
	</activation>
	<properties>
	  <tests.excludedGroups>ec.test.SystemTest</tests.excludedGroups>
	</properties>
      </profile>
	  
      <profile>
	&lt;!&ndash; This profile executes the SystemTest suite, but not the
	     other tests. &ndash;&gt;
	<id>SystemTests</id>
	<properties>
	  &lt;!&ndash; No test groups are excluded. &ndash;&gt;
	  <tests.excludedGroups></tests.excludedGroups>
	</properties>
	<build>
	  <plugins>
	    <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-surefire-plugin</artifactId>
	      <version>2.12.4</version>
	      <configuration>
			  <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
		&lt;!&ndash; We only run the SystemTest group (and no other
		     tests). &ndash;&gt;
		<groups>ec.test.SystemTest</groups>
	      </configuration>
	    </plugin>
	  </plugins>
	</build>
      </profile>
    </profiles>-->

    <repositories>
      <repository>
	<id>local-repo</id>
	<url>file:///${project.basedir}/local-repo</url>
      </repository>
    </repositories>
    
    <dependencies>
        <dependency>
          <groupId>org.ejml</groupId>
          <artifactId>all</artifactId>
          <version>0.27</version>
        </dependency>
        <dependency>
          <groupId>jfree</groupId>
          <artifactId>jfreechart</artifactId>
          <version>1.0.13</version>
        </dependency>
        <dependency>
          <groupId>com.lowagie</groupId>
          <artifactId>itext</artifactId>
          <version>1.2.3</version>
        </dependency>
	<dependency>
	  <groupId>org.apache.commons</groupId>
	  <artifactId>commons-math3</artifactId>
	  <version>3.6.1</version>
	  <scope>test</scope>
	</dependency>
	<dependency>
	  <groupId>junit</groupId>
	  <artifactId>junit</artifactId>
	  <version>4.12</version>
	  <scope>test</scope>
	</dependency>
	<dependency>
	  <groupId>org.jmock</groupId>
	  <artifactId>jmock-junit4</artifactId>
	  <version>2.11.0</version>
	  <scope>test</scope>
	</dependency>
	<dependency>
	  <groupId>pshecj</groupId>
	  <artifactId>pshecj</artifactId>
	  <version>1</version>
	</dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>


    <build>
      <plugins>
	<plugin>
	  <!-- Set main class in the Jar. -->
	  <groupId>org.apache.maven.plugins</groupId>
	  <artifactId>maven-jar-plugin</artifactId>
	  <configuration>
	    <archive>
	      <manifest>
		<mainClass>ec.Evolve</mainClass>
		<addClasspath>true</addClasspath>
		<classpathPrefix>dependency/</classpathPrefix>
	      </manifest>
	    </archive>
	  </configuration>
	</plugin>
	<!-- Copy dependency jars into the target directory. -->
	<plugin>
	  <groupId>org.apache.maven.plugins</groupId>
	  <artifactId>maven-dependency-plugin</artifactId>
	  <version>3.0.2</version>
	  <executions>
	    <execution>
              <id>copy-dependencies</id>
              <phase>package</phase>
              <goals>
		<goal>copy-dependencies</goal>
              </goals>
	    </execution>
	  </executions>
	</plugin>

	<!--Exclude expensive tests from default test suite. -->
<!--	<plugin>
	  <groupId>org.apache.maven.plugins</groupId>
	  <artifactId>maven-surefire-plugin</artifactId>
	  <version>2.12.4</version>
	  <configuration>
		  <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
	    <excludedGroups>${tests.excludedGroups}</excludedGroups>
	    <excludes>
	      &lt;!&ndash; XXX Temporary exclusion of failing tests &ndash;&gt;
	      <exclude>ec/co/ant/*.java</exclude>
	    </excludes>
	  </configuration>
	</plugin>-->
	
	<!--Measure code coverage of tests with JaCoCo. -->
<!--	<plugin>
	  <groupId>org.jacoco</groupId>
	  <artifactId>jacoco-maven-plugin</artifactId>
	  <version>0.8.5</version>
	  <executions>
	    <execution>
	      <id>default-prepare-agent</id>
	      <goals>
		<goal>prepare-agent</goal>
	      </goals>
	    </execution>
	    <execution>
	      <id>default-report</id>
	      <phase>prepare-package</phase>
	      <goals>
		<goal>report</goal>
	      </goals>
	    </execution>
	    <execution>
	      <id>default-check</id>
	      <goals>
		<goal>check</goal>
	      </goals>
	      <configuration>
		<rules>
		  &lt;!&ndash;  implementation is needed only for Maven 2  &ndash;&gt;
		  <rule>
		    <element>BUNDLE</element>
		    <limits>
		      &lt;!&ndash;  implementation is needed only for Maven 2  &ndash;&gt;
		      <limit>
			<counter>COMPLEXITY</counter>
			<value>COVEREDRATIO</value>
			&lt;!&ndash;<minimum>0.60</minimum>&ndash;&gt;
		      </limit>
		    </limits>
		  </rule>
		</rules>
	      </configuration>
	    </execution>
	  </executions>
	</plugin>-->
<!--		  <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-javadoc-plugin</artifactId>
		    <version>3.1.1</version>
		    <configuration>
		      <show>private</show>
		      <overview>file:///${project.basedir}/docs</overview>
		      <additionalJOption>-Xdoclint:none</additionalJOption>
		    </configuration>
		    <executions>
		      <execution>
			<goals>
			  <goal>javadoc</goal>
			</goals>
			<phase>package</phase>
		      </execution>
		    </executions>
		  </plugin>-->
      </plugins>
    </build>
</project>
